--- a/2/03/implement.ipynb
+++ b/2/03/implement.ipynb
@@ -59,7 +59,23 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (3,5) and (7,5) not aligned: 5 (dim 1) != 7 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[7], line 26\u001B[0m\n\u001B[1;32m     23\u001B[0m optimizer \u001B[38;5;241m=\u001B[39m Adam()\n\u001B[1;32m     24\u001B[0m trainer \u001B[38;5;241m=\u001B[39m Trainer(model, optimizer)\n\u001B[0;32m---> 26\u001B[0m \u001B[43mtrainer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcontexts\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtarget\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmax_epoch\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     27\u001B[0m trainer\u001B[38;5;241m.\u001B[39mplot()\n\u001B[1;32m     29\u001B[0m word_vecs \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mword_vecs\n",
+      "File \u001B[0;32m~/DataspellProjects/bottom_up_ml/common/trainer.py:39\u001B[0m, in \u001B[0;36mTrainer.fit\u001B[0;34m(self, x, t, max_epoch, batch_size, max_grad, eval_interval)\u001B[0m\n\u001B[1;32m     36\u001B[0m batch_t \u001B[38;5;241m=\u001B[39m t[iters\u001B[38;5;241m*\u001B[39mbatch_size:(iters\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m)\u001B[38;5;241m*\u001B[39mbatch_size]\n\u001B[1;32m     38\u001B[0m \u001B[38;5;66;03m# 기울기 구해 매개변수 갱신\u001B[39;00m\n\u001B[0;32m---> 39\u001B[0m loss \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mforward\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch_x\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbatch_t\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     40\u001B[0m model\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[1;32m     41\u001B[0m params, grads \u001B[38;5;241m=\u001B[39m remove_duplicate(model\u001B[38;5;241m.\u001B[39mparams, model\u001B[38;5;241m.\u001B[39mgrads)  \u001B[38;5;66;03m# 공유된 가중치를 하나로 모음\u001B[39;00m\n",
+      "Cell \u001B[0;32mIn[6], line 32\u001B[0m, in \u001B[0;36mSimpleCBOW.forward\u001B[0;34m(self, contexts, target)\u001B[0m\n\u001B[1;32m     30\u001B[0m h1 \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39min_layer1\u001B[38;5;241m.\u001B[39mforward(contexts[:,\u001B[38;5;241m1\u001B[39m])\n\u001B[1;32m     31\u001B[0m h \u001B[38;5;241m=\u001B[39m (h0\u001B[38;5;241m+\u001B[39mh1) \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m0.5\u001B[39m\n\u001B[0;32m---> 32\u001B[0m score \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mout_layer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mforward\u001B[49m\u001B[43m(\u001B[49m\u001B[43mh\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     33\u001B[0m loss \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mloss_layer\u001B[38;5;241m.\u001B[39mforward(score, target)\n\u001B[1;32m     34\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m loss\n",
+      "File \u001B[0;32m~/DataspellProjects/bottom_up_ml/common/layers.py:15\u001B[0m, in \u001B[0;36mMatMul.forward\u001B[0;34m(self, x)\u001B[0m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mforward\u001B[39m(\u001B[38;5;28mself\u001B[39m, x):\n\u001B[1;32m     14\u001B[0m     W, \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparams\n\u001B[0;32m---> 15\u001B[0m     out \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdot\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mW\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     16\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mx \u001B[38;5;241m=\u001B[39m x\n\u001B[1;32m     17\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m out\n",
+      "File \u001B[0;32m<__array_function__ internals>:200\u001B[0m, in \u001B[0;36mdot\u001B[0;34m(*args, **kwargs)\u001B[0m\n",
+      "\u001B[0;31mValueError\u001B[0m: shapes (3,5) and (7,5) not aligned: 5 (dim 1) != 7 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "# coding: utf-8\n",
     "import sys\n",
@@ -94,9 +110,23 @@
     "    print(word, word_vecs[word_id])\n"
    ],
    "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-12T02:42:32.837100Z",
+     "start_time": "2024-01-12T02:42:32.768586Z"
+    }
+   },
+   "id": "76690395f35f9b55",
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
     "collapsed": false
    },
-   "id": "76690395f35f9b55"
+   "id": "24889ada07a8d6f5"
   }
  ],
  "metadata": {
